# noctalia-cli

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md
src/: main.rs
src/config/: mod.rs
src/install/: mod.rs  shell.rs  systemd.rs
src/ipc/: mod.rs  shell.rs
src/run/: shell.rs
src/ui/: mod.rs
src/update/: mod.rs  shell.rs
