[package]
name = "noctalia"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
dialoguer = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls", "json"] }
flate2 = "1.0"
tar = "0.4"
console = "0.15"
indicatif = "0.17"
users = "0.11"
